tests/Rules/Ui/Fixtures/valid/good_contrast.html.twig
<div style="color: #000000; background-color: #ffffff">text</div>
