tests/Rules/Ui/Fixtures/invalid/bad_contrast.html.twig
<div style="color: #9a9a9a; background-color: #ffffff">low contrast</div>
